<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="welkom_title">Setupwizard</string>
    <string name="welkom_favorieten_selecteren_header">Favorieten selecteren</string>
    <string name="welkom_favorieten_selecteren_content1">Welkom in de Android-app van de 40ste editie van de Batavierenrace. Met deze app kun je de
                                                         uitslagen van alle teams, alle klassementen en informatie over alle etappes bekijken. Daarnaast
                                                         kun je luisteren naar BataRadio en weerinformatie bekijken.\n\nJe kunt ook favoriete teams selecteren. 
                                                         Deze zijn dan niet alleen snel bereikbaar vanuit het hoofdmenu, ook word je dan automatisch op de hoogte 
                                                         gesteld van nieuwe uitslagen van deze teams. Klik hieronder om favorieten te kiezen.</string>
    <string name="welkom_favorieten_selecteren_button_tekst">Voeg favoriet toe</string>
    <string name="welkom_favorieten_selecteren_content2">Je kunt ook favorieten toevoegen door via het teamoverzicht naar een team toe te gaan en dan op het
                                                         stericoontje rechtsboven te klikken.</string>
    <string name="welkom_instellingen_header">Automatische updates</string>
    <string name="welkom_instellingen_content1">Standaard worden op de achtergrond de gegevens van al je favoriete teams regelmatig opgehaald. Wanneer
                                                er nieuwe klassement- en etappeuitslagen zijn, word je hiervan via de Android-statusbalk en geluids-
                                                en trilsignalen op de hoogte gesteld. Via de instellingen kun je dit aanpassen. Klik hieronder om de instellingen
                                                te openen.</string>
    <string name="welkom_instellingen_button_tekst">Open instellingen</string>
    <string name="welkom_instellingen_content2">De instellingen zijn ook bereikbaar via de knop rechtsboven in het hoofdscherm.</string>
    <string name="welkom_button_vorige_tekst">Vorige</string>
    <string name="welkom_button_volgende_tekst">Volgende</string>
    <string name="welkom_button_voltooien_tekst">Voltooien</string>
    <string name="app_titel">Batavierenrace</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Annuleren</string>
    <string name="ab_zoeken">Zoeken</string>
    <string name="ab_sorteren">Sorteren</string>
    <string name="ab_volgen">Volg dit team</string>
    <string name="ab_verwijderen">Verwijder dit team</string>
    <string name="ab_berichten">Berichten</string>
    <string name="ab_instellingen">Instellingen</string>
    <string name="ab_foutcodes">Foutcodes</string>
    <string name="ab_addfavoteam">Voeg een team toe</string>
    <string name="ab_update">Update</string>
    <string name="main_batadag_duurt_nog_dagen">Het duurt nog %s dagen!</string>
    <string name="main_batadag_duurt_nog_dag">Het aftellen is begonnen!</string>
    <string name="main_batadag_vandaag">Batavierenrace XL gestart!</string>
    <string name="main_batadag_geweest">Tot volgend jaar!</string>
    <string name="sorteren_naam">Naam</string>
    <string name="sorteren_startnummer">Startnummer</string>
    <string name="dashboard_favorieten">Favorieten</string>
    <string name="dashboard_klassement">Klassement</string>
    <string name="dashboard_teams">Teams</string>
    <string name="dashboard_etappes">Etappes</string>
    <string name="dashboard_informatie">Informatie</string>
    <string name="dashboard_jubileum">Jubileum</string>
    <string name="dashboard_bataradio">BataRadio</string>
    <string name="dashboard_weer">Weer</string>
    <string name="dashboard_sponsor">Sponsor</string>
    <string name="zoeken_team">Zoeken…</string>
    <string name="laden_titel">Bezig met laden</string>
    <string name="km">%s km</string>
    <string name="kmu">%s km/u</string>
    <string name="uur">%s</string>
    <string name="geen_data_titel">Helaas! Kan geen gegevens ophalen.</string>
    <string name="geen_data_bericht">Controleer uw internetverbinding.</string>
    <string name="geen_internet">Geen internetverbinding, mogelijk is de data verouderd.</string>
    <string name="ja">Ja</string>
    <string name="nee">Nee</string>
    <string name="ok">OK</string>
    <string name="sort_D">\u2191</string>
    <string name="sort_A">\u2193</string>
    <string name="sort_naam">Naam</string>
    <string name="sort_startnummer">Startnummer</string>
    <string name="sort_stand">Stand</string>
    <string name="favo_verwijderteam">Verwijder team</string>
    <string name="favo_leeg_titel">U heeft geen favoriete teams!</string>
    <string name="favo_leeg_bericht">Wilt u nu teams toevoegen?</string>
    <string name="klassementen_laden">Klassementen worden geladen…</string>
    <string name="klassement_titel">Klassement</string>
    <string name="klassement_laden">Klassement wordt geladen…</string>
    <string name="klassement_header_stand">#</string>
    <string name="klassement_header_team">Team</string>
    <string name="klassement_header_tijd">Tijd</string>
    <string name="klassement_hint">Klassement is gebaseerd op etappe %s</string>
    <string name="klassement_leeg">Er is geen klassement gevonden.</string>
    <string name="teams_header_startnummer">#</string>
    <string name="teams_header_naam">Team</string>
    <string name="teams_laden">Teams worden geladen…</string>
    <string name="teams_geenteams">Geen teams gevonden.</string>
    <string name="team_laden">Team wordt geladen…</string>
    <string name="team_titel_informatie">Informatie</string>
    <string name="team_titel_looptijden">Looptijden</string>
    <string name="team_titel_klassement">Klassement</string>
    <string name="team_h1_informatie">Algemene informatie</string>
    <string name="team_looptijden">Tijd:</string>
    <string name="team_naam">Naam</string>
    <string name="team_startnummer">Startnummer</string>
    <string name="team_startgroep">Startgroep</string>
    <string name="team_h1_klassement">Klassement</string>
    <string name="team_klassement">Klassement</string>
    <string name="team_klassement_totetappe">* Klassement is gebaseerd op etappe %s</string>
    <string name="team_cum_klassement">Notering</string>
    <string name="team_totaal_looptijd">Totale looptijd</string>
    <string name="team_looptijden_header_etappe">#</string>
    <string name="team_looptijden_header_tijd">Tijd</string>
    <string name="team_looptijden_header_snelheid">Snelheid</string>
    <string name="team_looptijden_header_etappe_klassement"># Etappe</string>
    <string name="team_looptijden_header_cum_klassement"># Cumul.</string>
    <string name="team_looptijden_header_foutcode">Code</string>
    <string name="team_looptijden_leeg">Geen looptijden gevonden.</string>
    <string name="team_looptijden_draai">Draai het scherm voor meer gegevens.</string>
    <string name="etappes_laden">Etappes worden geladen…</string>
    <string name="etappe_informatie">Algemene informatie</string>
    <string name="etappe_informatie_afstand">Afstand</string>
    <string name="etappe_informatie_geslacht">Geslacht</string>
    <string name="etappe_hoogteverschil">Hoogteverschil</string>
    <string name="etappe_recordtijd">Recordtijd</string>
    <string name="etappe_recordtijd_team">Teamnaam</string>
    <string name="etappe_recordtijd_tijd">Tijd</string>
    <string name="weer_bron_google">bron: Google</string>
    <string name="weer_bron_knmi_buienradar">bron: KNMI/Buienradar</string>
    <string name="weer_plaats">Plaats</string>
    <string name="weer_temperatuur">Temp.</string>
    <string name="weer_weericoon">Weer</string>
    <string name="weer_huidigweer">Huidige weersituatie</string>
    <string name="weer_nijmegen">Nijmegen</string>
    <string name="weer_nijmegen_snachts">Nijmegen (\'s nachts)</string>
    <string name="weer_ruurlo">Ruurlo</string>
    <string name="weer_enschede">Enschede</string>
    <string name="weer_advies">Advies</string>
    <string name="weer_verwachte_max_temp_niet_bekend">Verwachte maximumtemperatuur is (nog) niet bekend, daarom kan nog geen advies worden gegeven.</string>
    <string name="weer_verwachtweer">Verwacht weer racedag</string>
    <string name="weer_verwachtweer_nog_niet_bekend">(Nog) niet bekend.</string>
    <string name="weer_algemeneverwachting">Algemene verwachting</string>
    <string name="bataradio_live_header">Internetstream</string>
    <string name="bataradio_algemeen_header">Algemene informatie</string>
    <string name="bataradio_algemeen">BataRadio brengt een mix van muziek, actuele informatie over de race, live verslaggeving en reportages.\n\nZo hoor je om het half uur een update met al het actuele nieuws over de Batavierenrace. Uiteraard zijn er verslaggevers van BataRadio aanwezig bij de start in Nijmegen en de finish in Enschede en op de verschillende wisselpunten en herstarts.\n\nDaarnaast volgt BataRadio een aantal teams die geregeld zullen worden gebeld in de uitzending. Ook komen er gasten langs in de studio in het sportcentrum in Enschede en zijn er achtergrondreportages te horen.\n\nIn Enschede is BataRadio te ontvangen op 105.1 FM en in Nijmegen op 107.8 FM.</string>
    <string name="bataradio_programmering_header">Programmering</string>
    <string name="bataradio_programmering_row1_col1">21:00–23:00</string>
    <string name="bataradio_programmering_row1_col2">Thijs Maalderink</string>
    <string name="bataradio_programmering_row2_col1">23:00–01:00</string>
    <string name="bataradio_programmering_row2_col2">Thymen Wabeke</string>
    <string name="bataradio_programmering_row3_col1">01:00–03:00</string>
    <string name="bataradio_programmering_row3_col2">Thomas van Vliet</string>
    <string name="bataradio_programmering_row4_col1">03:00–05:00</string>
    <string name="bataradio_programmering_row4_col2">Pim van Dongen</string>
    <string name="bataradio_programmering_row5_col1">05:00–07:00</string>
    <string name="bataradio_programmering_row5_col2">Iwan Verrips</string>
    <string name="bataradio_programmering_row6_col1">07:00–09:00</string>
    <string name="bataradio_programmering_row6_col2">Elger van der Wel</string>
    <string name="bataradio_programmering_row7_col1">09:00–11:00</string>
    <string name="bataradio_programmering_row7_col2">Thijs Maalderink</string>
    <string name="bataradio_programmering_row8_col1">11:00–13:00</string>
    <string name="bataradio_programmering_row8_col2">Elger van der Wel</string>
    <string name="bataradio_programmering_row9_col1">13:00–15:00</string>
    <string name="bataradio_programmering_row9_col2">Bas van Dalen</string>
    <string name="bataradio_programmering_row10_col1">15:00–17:00</string>
    <string name="bataradio_programmering_row10_col2">Arno Leblanc</string>
    <string name="bataradio_programmering_row11_col1">17:00–19:00</string>
    <string name="bataradio_programmering_row11_col2">Thomas van Vliet</string>
    <string name="foutcode_a">Anders voortbewogen</string>
    <string name="foutcode_d">Diskwalificatie loper</string>
    <string name="foutcode_h">Heer op damesetappe</string>
    <string name="foutcode_i">Etappe ingekort</string>
    <string name="foutcode_l">Limiet overschreden</string>
    <string name="foutcode_m">Medische Uitsluiting</string>
    <string name="foutcode_n">Geen geldige looptijd</string>
    <string name="foutcode_o">Etappe opgesplitst</string>
    <string name="foutcode_t">Tweemaal gelopen</string>
    <string name="foutcode_u">UK, onregelmentair gelopen</string>
    <string name="foutcode_v">Valse wissel</string>
    <string name="foutcode_w">Weigeren hes</string>
    <string name="foutcode_x">Etappe afgelast</string>
    <string name="foutcode_z">Meer dan 5x geen looptijd</string>
</resources>