<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/scroller" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
		    style="@style/h1_boven"
		    android:text="@string/weer_huidigweer" />
		<TextView
		    style="@style/h1_onder"
		    android:text="@string/weer_bron_google" />
        <include layout="@layout/weer_advies_huidig" />
	
        <TextView
            style="@style/h1"
            android:text="@string/weer_advies" />
        <TextView
            style="@style/container_block"
            android:text="@string/weer_verwachte_max_temp_niet_bekend" />
    </LinearLayout>
</ScrollView>