<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/scroller" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
            style="@style/h1"
            android:text="@string/weer_verwachtweer" />
        <TextView
            android:text="@string/weer_verwachtweer_nog_niet_bekend"
            style="@style/container_block" />
        
        <TextView
            style="@style/h1_boven"
            android:text="@string/weer_algemeneverwachting" />
        <TextView
            style="@style/h1_onder"
            android:text="@string/weer_bron_knmi_buienradar" />
        <TextView
            android:id="@+id/weer_algemene_verwachting"
            style="@style/container_block" />
    </LinearLayout>
</ScrollView>